# challenge

./: Dockerfile  README.MD  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  controller.py  models.py  view.py
app/templates/: index.html  list_scan.html
