[tool.poetry]
name = "challenge - backend - minidast"
version = "0.1.0"
description = ""
authors = ["Enzo Silva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
